--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- <button id="rzp-button1">Pay</button> -->
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <script>
-        alert(price)
+        alert('price')
         var options = {
             "key": "rzp_test_wVCNFh5g1mZLBX", //secret key: EfN47sBo7K3GEgCqTD3h9nMk
             "amount": "5999000", /// The amount is shown in currency subunits. Actual amount is ₹599.
